--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://www.ash-hair.com/recruit/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -63,7 +63,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="http://www.ateliermai.or.tv/recruit/recruit.html">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -78,7 +78,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://11cut-job.net/jobfind-pc/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -93,26 +93,26 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://www.hairwork-progress.jp/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
 				</div>
 
 				<!-- ユニックス -->
-				<!-- <div class="exhibitor">
+				<div class="exhibitor">
 					<div class="format_part">
-						<img class="format" src="./images/11cut.jpg" alt="format">
+						<img class="format" src="./images/UNIX.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://www.unix.co.jp/home/saiyo_portal">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
-				</div> -->
+				</div>
 
 				<!-- アクアフィール  -->
 				<div class="exhibitor">
@@ -123,7 +123,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="http://aquafeel-group.co.jp/recruit/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -138,7 +138,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://www.refuge-hair.com/message/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -153,7 +153,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://www.tomys.net/recruit/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -168,7 +168,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://www.aderans.co.jp/corporate/job/newgraduate/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -183,7 +183,7 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
-						<a href="">
+						<a href="https://be-area.co.jp/recruit/info/">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
@@ -198,7 +198,22 @@
 						<a href="">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
+						<a href="http://www.21-hair.com/">
+							<img class="hp" src="./images/HP.jpg" alt="hp">
+						</a>
+					</div>
+                </div>
+                
+                <!-- アルバム -->
+				<div class="exhibitor">
+					<div class="format_part">
+						<img class="format" src="./images/ALBUM.jpg" alt="format">
+					</div>
+					<div class="bottom_part">
 						<a href="">
+							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
+						</a>
+						<a href="https://www.album-hair.com/recruit">
 							<img class="hp" src="./images/HP.jpg" alt="hp">
 						</a>
 					</div>
