added the zoom URL links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<img class="format" src="./images/Ash.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/96937901207?pwd=ZUFXTkY3TGlJTW9COWVJK2V0RjJRZz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.ash-hair.com/recruit/">
@@ -60,7 +60,7 @@
 						<img class="format" src="./images/CRED-GARDEN.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/91034380539?pwd=Snh4RG9LQk5XSy8vQVFObGZBV1VhZz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="http://www.ateliermai.or.tv/recruit/recruit.html">
@@ -75,7 +75,7 @@
 						<img class="format" src="./images/11cut.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://us04web.zoom.us/j/74890223846?pwd=aXJLWUZGOGJmdk80MHhQOVBEMnFZZz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://11cut-job.net/jobfind-pc/">
@@ -90,7 +90,7 @@
 						<img class="format" src="./images/PROGRESS.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/93052642464?pwd=ZWpOVWdVbWEwU3gxZytpNFlRc3RvUT09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.hairwork-progress.jp/">
@@ -105,7 +105,7 @@
 						<img class="format" src="./images/UNIX.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://us04web.zoom.us/j/71318642950?pwd=bDlpUFM1cXF6U3NNL0YweEE0bko5UT09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.unix.co.jp/home/saiyo_portal">
@@ -120,7 +120,7 @@
 						<img class="format" src="./images/AQUA-FEEL.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://us04web.zoom.us/j/75334729818?pwd=c1liK2trQmxhdTdZMkpFYldaRXdDZz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="http://aquafeel-group.co.jp/recruit/">
@@ -135,7 +135,7 @@
 						<img class="format" src="./images/Refuge.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/97776870279?pwd=Sm8xTkN6bitMNDVQOEJ3N203UERxdz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.refuge-hair.com/message/">
@@ -150,7 +150,7 @@
 						<img class="format" src="./images/T0MY'S_STAR.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://us04web.zoom.us/j/75156545774?pwd=eDFkRXJUY0FjQlNYSVRZNTFLZDFhZz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.tomys.net/recruit/">
@@ -165,7 +165,7 @@
 						<img class="format" src="./images/aderance.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/98819340827?pwd=d29VZEdXMXJWZjFwZjNVQnY4d2lvdz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.aderans.co.jp/corporate/job/newgraduate/">
@@ -180,7 +180,7 @@
 						<img class="format" src="./images/BE-AREA.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://us04web.zoom.us/j/79179410111?pwd=TjJ0NnAyTGVzMGVYUDJRNGtBRUI1UT09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://be-area.co.jp/recruit/info/">
@@ -195,7 +195,7 @@
 						<img class="format" src="./images/Twenty-One.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/95575778500?pwd=dVN1Sk9tL0x2R3YwQUJrL2tZL2FzZz09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="http://www.21-hair.com/">
@@ -210,7 +210,7 @@
 						<img class="format" src="./images/ALBUM.jpg" alt="format">
 					</div>
 					<div class="bottom_part">
-						<a href="">
+						<a href="https://zoom.us/j/91387457058?pwd=dG1sV0RKQzVQQUdSL21pdzdvdGdtQT09">
 							<img class="zoom" src="./images/ZOOM.jpg" alt="zoom">
 						</a>
 						<a href="https://www.album-hair.com/recruit">
